readme GRID avtualizado+giph --carpeta public GRID

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /.vscode 
 /FLEXBOX_04-10/ex-css-flex/readme-img/
 /FLEXBOX_04-10/ex-css-flex/README.md
+/GRID_04-10/ex-css-grid-image-gallery/README.md
+/GRID_04-10/ex-css-grid-image-gallery/readme.images/
